--- a/views/mascotas/index.ejs
+++ b/views/mascotas/index.ejs
@@ -2,8 +2,8 @@
     Mascotas disponibles en la base de datos.
 </h1>
 
-<a href="/mascotas/add">Añadir una nueva mascota</a>
-
+<a href="/mascotas/add">Añadir una nueva mascota</a> <br>
+<a href="/mascotas/ubicaciones">Ver todas las ubicaciones de los animales encontrados.</a> <br>
 <% mascotas.forEach((m) => { %>
     <%=m.tipo%> 
     <%=m.nombre%> 
