--- a/views/mascotas/ubicaciones.ejs
+++ b/views/mascotas/ubicaciones.ejs
@@ -12,6 +12,46 @@
       <div id="map">
       </div>
       
-    <script type="text/javascript" src='/public/main.js'></script>
+    <script type="text/javascript">
+      var map = L.map('map').setView([6.511815, -65.797119], 4);
+
+      L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+      }).addTo(map);
+
+      var mascotaEnMapa = []
+      const cargarMascotas = async () => {
+      const response = await fetch('http://localhost:5000/api/mascotas'); 
+      // Llamada a la api, desde el lado del servidor.
+      const myJson = await response.json(); 
+      if(myJson == null || myJson.length < 1){
+        alert("No hay mascotas para mostrar su ubicación de rescate!");
+      }
+        else{
+          myJson.forEach(m => {
+            //alert(m.ubicacion[0] + " , " + m.ubicacion[1]);
+            console.log(m);
+            var marker = L.marker(m.ubicacion).addTo(map);
+            var apopup = L.popup({closeButton : false, autoClose: false})
+            .setContent("¡Aqui encontramos a "+ m.nombre +"!");
+            marker.bindPopup(apopup);
+
+            function muestraPopup(e) {
+              marker.openPopup();
+            }
+            function cierraPopup(e) {
+              marker.closePopup();
+            }
+
+            marker.on("mouseover", muestraPopup);
+            marker.on("mouseout", cierraPopup);
+            mascotaEnMapa.push(marker);
+          });
+        }
+      }
+
+
+      window.onload = cargarMascotas;
+    </script>
   </body>
 </html>
