Haciendo el CRUD del historial de mascota

--- a/views/mascotas/show.ejs
+++ b/views/mascotas/show.ejs
@@ -12,7 +12,7 @@
         <div style="display: none;" id="lat"><%= mascota.ubicacion[0] %></div>
         <div style="display: none;" id="lon"><%= mascota.ubicacion[1] %></div>
     </div>
-    <b>Ver historial clinico (WIP)</b> <br>
+    <b><a href="/historiales/<%= mascota._id%>">Ver historial clinico</a></b> <br>
     <b>Ver posibles dueños (WIP)</b> <br>
     <b>Dueño actual (WIP)</b> <br>
 </p> 
