--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,8 @@
-<h1>
-    Pagina principal
-</h1>
+<%- include("header", {seccion: "Pagina Principal", opciones: [
+{link: "/mascotas", label: "Mascotas"},
+{link: "/adopciones", label: "Adopciones"},
+{link: "/personal", label: "Personal"} ]})%>
+
+Patitas Lindas uwu
+
+<%- include("footer")%>
