--- a/views/mascotas/form.ejs
+++ b/views/mascotas/form.ejs
@@ -1,11 +1,22 @@
 
+<%- include("../header", {seccion: "Mascotas", opciones: [
+{link: "/mascotas", label: "Mascotas", activo: true},
+{link: "/adopciones", label: "Adopciones"},
+{link: "/personal", label: "Personal"} ]})%>
+
 <%if (messages.error) {%>
     <%=messages.error%>
 <%}%>
 
 <%if (modo == "add") {%>
+    <h1>
+        Registrar a una nueva Mascota
+    </h1>
 <form action="/mascotas/add" method="post">
 <%} else {%>
+    <h1>
+        Editar a una Mascota
+    </h1>
 <form action="/mascotas/edit/<%=edit._id%>" method="post">
 <%}%>
     <input type="hidden" autocomplete="off">
@@ -40,7 +51,7 @@
     value="<%= (oldInput.value('encontrado_por') ?? (locals.edit ? edit.encontrado_por : '')) %>" required>
     <br>
     <label for="mapinput">En donde lo encontraron?: </label>
-    <div id="mapinput" style="height: 300px;width: 300px;"></div>
+    <div id="mapinput" style="height: 500px;"></div>
 
     <% 
         var old_ubica = oldInput.value('ubicacion');
@@ -63,7 +74,12 @@
     <br>
         
     </div>
-    <button type="submit">Registrar mascota</button>
+    
+    <%if (modo == "add") {%>
+        <button type="submit">Registrar Mascota</button>
+    <%} else {%>
+        <button type="submit">Guardar Cambios</button>
+    <%}%>
 </form>
 
 <link rel="stylesheet" href="/public/leaflet/leaflet.css"/>
@@ -72,14 +88,14 @@
     var latitud = document.getElementById("lat");
     var longitud = document.getElementById("lon");
 
-    var map = L.map('mapinput').setView([6.511815, -65.797119], 9);
+    var map = L.map('mapinput').setView([6.511815, -65.797119], 6);
 
     L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
     }).addTo(map);
     //var marker = L.marker(m.ubicacion).addTo(map);
     var marker = L.marker([latitud.value != "null" ? latitud.value : 0.0, longitud.value != "null"  ? longitud.value : 0.0])
-    if(latitud.value != 'null'){
+    if(latitud.value != 'null' || latitud.value != ''){
         marker.addTo(map);
     }
     function setUbicacion(e) {
@@ -93,3 +109,5 @@
     map.on("click", setUbicacion)
 
 </script>
+
+<%- include("../footer")%>
