--- a/views/mascotas/index.ejs
+++ b/views/mascotas/index.ejs
@@ -1,3 +1,9 @@
+
+<%- include("../header", {seccion: "Mascotas", opciones: [
+{link: "/mascotas", label: "Mascotas", activo: true},
+{link: "/adopciones", label: "Adopciones"},
+{link: "/personal", label: "Personal"} ]})%>
+
 <h1>
     Mascotas disponibles en la base de datos.
 </h1>
@@ -6,19 +12,50 @@
 <h3><%=messages.noti%></h3>
 <%}%>
 
-<a href="/mascotas/add">Añadir una nueva mascota</a> <br>
-<a href="/mascotas/ubicaciones">Ver todas las ubicaciones de los animales encontrados.</a> <br>
-<% mascotas.forEach((m) => { %>
-    <%=m.tipo%>  
-    <%=m.nombre%>
-    <%=m.raza%> 
-    <%=m.sexo%> 
-    <a href="/mascotas/show/<%=m._id%>">Detalles</a>
-    <a href="/mascotas/edit/<%=m._id%>">Editar</a>
-    <form action="/mascotas/delete/<%=m._id%>" method="post" 
-        onsubmit="confirm('¿Seguro que quieres eliminar esta mascota? ¡Esta accion no se puede deshacer!')">
-        <input type="submit" value="Eliminar">
-    </form>
-    
-    <br>
-<% }) %>
+<a href="/mascotas/add" class="btn btn-primary">
+    Añadir una nueva mascota
+</a>
+<a href="/mascotas/ubicaciones" class="btn btn-primary">
+    Ver todas las ubicaciones de los animales encontrados
+</a>
+<hr>
+<% if(mascotas.length > 0) { %> 
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Tipo</th>
+            <th scope="col">Nombre</th>
+            <th scope="col">Raza</th>
+            <th scope="col">Sexo</th>
+            <th scope="col">Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% mascotas.forEach((m, i) => { %>
+        <tr>
+            <th scope="row"><%=i+1%></th>
+            <td><%=m.tipo%></td>
+            <td><%=m.nombre%></td>
+            <td><%=m.raza%></td>
+            <td><%=m.sexo%></td>
+            <td class="btn-group">
+                <a href="/mascotas/show/<%=m._id%>" class="btn btn-secondary">Detalles</a>
+                <a href="/mascotas/edit/<%=m._id%>"  class="btn btn-warning">Editar</a>
+                <form action="/mascotas/delete/<%=m._id%>" method="post" 
+                    onclick="return confirm('¿Seguro que quieres eliminar a esta mascota? ¡Esta accion no se puede deshacer!');">
+                    <button type="submit" class="btn btn-danger">Eliminar</button>
+                </form>
+            </td>
+        </tr>
+        <% }) %>
+    </tbody>
+</table>
+<%} else {%>
+    <h3>No hay mascotas registradas en la base de datos!</h3>
+<%} %> 
+
+
+
+
+<%- include("../footer")%>
