Cambio de ultimo minuto

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,7 @@
     <footer>
      <hr>
-      Hecho por Samuel Marquez C.I.:26.599.028 - 2022
+      Hecho por Samuel Marquez CI:26.599.028 - 2022
+      Informe por Andrea Marabay CI:25.693.248  
      <hr>
     </footer>
    </div>
