--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,12 @@
 {link: "/adopciones", label: "Adopciones"},
 {link: "/personal", label: "Personal"} ]})%>
 
-Patitas Lindas uwu
+<h1>Menú principal</h1>
+
+<ul>
+    <li><a href="/mascotas"> Registro de Mascotas</a></li>
+    <li><a href="/adopciones">Registro de Adopciones</a></li>
+    <li><a href="/personal">Registro del Personal</a></li>
+</ul>
 
 <%- include("footer")%>
